fix(CSS): header z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ header {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	z-index: 3;
+	z-index: 100;
 	padding: 5px 20px;
 	width: fit-content;
 }
